qt6/svg/gen_qsvggenerator.h

class QIODevice;
class QPaintDevice;
class QPaintEngine;
class QPainter;
class QPoint;
class QRect;
class QRectF;
class QSize;
class QSvgGenerator;
typedef struct QIODevice QIODevice;
typedef struct QPaintDevice QPaintDevice;
typedef struct QPaintEngine QPaintEngine;
typedef struct QPainter QPainter;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRectF QRectF;
typedef struct QSize QSize;
typedef struct QSvgGenerator QSvgGenerator;
struct QSvgGenerator_VTable {
	void (*destructor)(struct QSvgGenerator_VTable* vtbl, QSvgGenerator* self);
	QPaintEngine* (*paintEngine)(struct QSvgGenerator_VTable* vtbl, const QSvgGenerator* self);
	int (*metric)(struct QSvgGenerator_VTable* vtbl, const QSvgGenerator* self, int metric);
	int (*devType)(struct QSvgGenerator_VTable* vtbl, const QSvgGenerator* self);
	void (*initPainter)(struct QSvgGenerator_VTable* vtbl, const QSvgGenerator* self, QPainter* painter);
	QPaintDevice* (*redirected)(struct QSvgGenerator_VTable* vtbl, const QSvgGenerator* self, QPoint* offset);
	QPainter* (*sharedPainter)(struct QSvgGenerator_VTable* vtbl, const QSvgGenerator* self);
};
QSvgGenerator* QSvgGenerator_new(struct QSvgGenerator_VTable* vtbl);
struct miqt_string QSvgGenerator_title(const QSvgGenerator* self);
void QSvgGenerator_setTitle(QSvgGenerator* self, struct miqt_string title);
struct miqt_string QSvgGenerator_description(const QSvgGenerator* self);
void QSvgGenerator_setDescription(QSvgGenerator* self, struct miqt_string description);
QSize* QSvgGenerator_size(const QSvgGenerator* self);
void QSvgGenerator_setSize(QSvgGenerator* self, QSize* size);
QRect* QSvgGenerator_viewBox(const QSvgGenerator* self);
QRectF* QSvgGenerator_viewBoxF(const QSvgGenerator* self);
void QSvgGenerator_setViewBox(QSvgGenerator* self, QRect* viewBox);
void QSvgGenerator_setViewBoxWithViewBox(QSvgGenerator* self, QRectF* viewBox);
struct miqt_string QSvgGenerator_fileName(const QSvgGenerator* self);
void QSvgGenerator_setFileName(QSvgGenerator* self, struct miqt_string fileName);
QIODevice* QSvgGenerator_outputDevice(const QSvgGenerator* self);
void QSvgGenerator_setOutputDevice(QSvgGenerator* self, QIODevice* outputDevice);
void QSvgGenerator_setResolution(QSvgGenerator* self, int dpi);
int QSvgGenerator_resolution(const QSvgGenerator* self);
QPaintEngine* QSvgGenerator_virtualbase_paintEngine(const void* self);
int QSvgGenerator_virtualbase_metric(const void* self, int metric);
int QSvgGenerator_virtualbase_devType(const void* self);
void QSvgGenerator_virtualbase_initPainter(const void* self, QPainter* painter);
QPaintDevice* QSvgGenerator_virtualbase_redirected(const void* self, QPoint* offset);
QPainter* QSvgGenerator_virtualbase_sharedPainter(const void* self);
void QSvgGenerator_delete(QSvgGenerator* self);